--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
       </div>
 
-      Quotes Section
+      <!-- Quotes Section -->
       <div id="quotes-section">
         <div class="content center">
           <span class="quote"
